--- a/public/forgot_password.html
+++ b/public/forgot_password.html
@@ -6,7 +6,7 @@
     <title>Password Recovery</title>
     <link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Roboto:wght@400;600;700&amp;display=swap'>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="/U/os_interface/resources/css/index_linker.css">
+    <link rel="stylesheet" href="/os_interface/resources/css/index_linker.css">
     <style>
         .recovery-box {
             background-color: rgba(0, 0, 0, 0.7);
@@ -46,18 +46,21 @@
             color: #4a90e2;
             text-decoration: none;
         }
+        .user-name {
+            font-size: 24px;
+            color: white;
+            margin-bottom: 20px;
+        }
     </style>
 </head>
-<body class="night" sysDesktopBackGround style="background-image: url('/U/os_interface/images/mac.jpg'); width: 100%; height: 100%;">
+<body class="night" sysDesktopBackGround style="background-image: url('/os_interface/resources/css/mac.jpg'); width: 100%; height: 100%;">
     <div class="recovery-box">
-        <div class="user-container">
-            <div class="user" data-user="User-One"></div>
             <div class="user-name">
                 <p>Password Recovery</p>
             </div>
-        </div>
 
-        <form action="/U/os_interface/src/components/password_recovery.php" method="post">
+
+        <form action="/os_interface/src/components/password_recovery.php" method="post">
             <div class="LockScreenLogIn">
                 <input type="text" name="username" class="recovery-input" placeholder="Enter Username" required autocomplete="off"/>
                 <input type="email" name="email" class="recovery-input" placeholder="Enter Email" required autocomplete="off"/>
@@ -69,7 +72,7 @@
         </form>
 
         <div class="back-to-login">
-            <a href="/U/os_interface/public/login.html">Back to Login</a>
+            <a href="/os_interface/public/login.html">Back to Login</a>
         </div>
     </div>
 </body>
