--- a/public/index.html
+++ b/public/index.html
@@ -6,18 +6,18 @@
     <title>Mac OS Login</title>
     <link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Roboto:wght@400;600;700&amp;display=swap'>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="/U/os_interface/resources/css/index_linker.css">
+    <link rel="stylesheet" href="/os_interface/resources/css/index_linker.css">
 </head>
-<body class="night" sysDesktopBackGround style="background-image: url('/U/os_interface/images/mac.jpg'); width: 100%; height: 100%;">
+<body class="night" sysDesktopBackGround>
     <div class="lockScreen">
         <div class="user-container">
-            <div class="user" data-user="User-One" style="background-image: url(/U/os_interface/images/avatar.png);"></div>
+            <div class="user" data-user="User-One" style="background-image: url(/os_interface/images/avatar.png);"></div>
             <div class="user-name">
-                <p>Signup</p>
+                <p>  Signup</p>
             </div>
         </div>
 
-        <form action="/U/os_interface/src/components/signup.php" method="post">
+        <form action="/os_interface/src/components/signup.php" method="post">
             <div class="LockScreenLogIn">
                 <input type="text" name="lastname" class="SystemLockInput" placeholder="Enter Name" required autocomplete="off"/>
                 <input type="text" name="Email" class="SystemLockInput" placeholder="Enter email" required autocomplete="off"/>
@@ -29,14 +29,12 @@
 
         <div class="inqury" style="text-align: center; margin-top: 1rem;">
             <p>Already have an account?</p>
-            <a class="link" href="/U/os_interface/public/login.html" style="text-decoration:none;"">
+            <a class="link" href="/os_interface/public/login.html" style="text-decoration:none;"">
                 <div class="login empty" style="border-radius: 5px; width: 100%; height: 100%; padding: 0.8rem; color: white; font-size: 600;">
-                    <p>login</p>
+                    <p id="login">login</p>
                 </div>
             </a>
         </div> 
     </div>
-
-    <script src="/os_interface/resources/js/index_auth.js"></script>
 </body>
 </html>
